# TVLCOM

./: CMakeLists.txt  README.md  main.py  pyproject.toml
PYTVLCOM/: COM.py  RE.py  TEST.py  TR.py  __init__.py  config.py  py.typed
benchmarks/: bench_protocol.py  profile.pstats  profile_cpu.py
docs/: API.md  DEBUGGING.md  PERFORMANCE.md  PORTING.md  PROTOCOL.md  README.md  TVLCOM.md  TVLCOM_zh-CN.md
src/: GLOBAL_CONFIG.h  SHARED_CONFIG.h  main.c  shared_config.py
src/HAL/: hal.c  hal.h  hal_platform.h
src/HAL/stm32/: hal_stm32.c  hal_stm32.h
src/HAL/windows/: hal_windows.c  hal_windows.h
src/Serial/: SERIAL.c  SERIAL.h
src/SoftwareAnalysis/: S_RECEIVE_PROTOCOL.c  S_RECEIVE_PROTOCOL.h  S_TLV_PROTOCOL.c  S_TLV_PROTOCOL.h  S_TRANSPORT_PROTOCOL.c  S_TRANSPORT_PROTOCOL.h
tests/: __init__.py  test_crc.py  test_dispatcher.py  test_frame_and_parser.py  test_protocol.c  test_tlv_parser.py
